lab2 final update

--- a/Laboratorio/Lab2/Relatorio/Relatorio.tex
+++ b/Laboratorio/Lab2/Relatorio/Relatorio.tex
@@ -27,68 +27,68 @@
 \section{Aliasing de um Senoidal}
 
 \subsection{a)}
-O gráfico solicitado se encontra na figura 1.
+O gráfico solicitado se encontra na \textbf{figura 1}.
 
-%\lstinputlisting[style=Matlab-editor, caption={Código em MATLAB que cria a função senoidal e gera o gráfico.}, basicstyle = \mlttfamily\scriptsize]{../Programas/ex1/a.m}
+\lstinputlisting[style=Matlab-editor, caption={Código em MATLAB que cria a função senoidal e gera o gráfico.}, basicstyle = \mlttfamily\scriptsize]{../Programas/ex1/a.m}
 
-%\begin{figure}[H]
-%	\centering
-%	\includegraphics[scale=0.7]{../Imagens/ex1/a.jpg} 
-%	\caption{Onda senoidal amostrada}
-%	\label{fig:1a}
-%\end{figure}
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.5]{../Imagens/ex1/a.jpg} 
+	\caption{Onda senoidal amostrada}
+	\label{fig:1a}
+\end{figure}
 
 \subsection{b)}
 
-O gráfico com plot se encontra na figura 
+O gráfico com plot se encontra na \textbf{figura 2}.
 
-%\lstinputlisting[style=Matlab-editor, caption={Código em MATLAB que cria a função senoidal e gera o gráfico.}, basicstyle = \mlttfamily\scriptsize]{../Programas/ex1/b.m}
+\lstinputlisting[style=Matlab-editor, caption={Código em MATLAB que cria a função senoidal e gera o gráfico.}, basicstyle = \mlttfamily\scriptsize]{../Programas/ex1/b.m}
 
-%\begin{figure}[H]
-%	\centering
-%	\includegraphics[scale=0.7]{../Imagens/ex1/b.jpg} 
-%	\caption{Onda senoidal amostrada, agora interpolada linearmente.}
-%	\label{fig:1a}
-%\end{figure}
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.5]{../Imagens/ex1/b.jpg} 
+	\caption{Onda senoidal amostrada, agora interpolada linearmente.}
+	\label{fig:1b}
+\end{figure}
 
 \subsection{c)}
 
-A sequência de gráficos se encontra na figura. Fica claro que a frequência aparente da senóide aumenta.
+A sequência de gráficos se encontra na \textbf{figura 3}. Fica claro que a frequência aparente da senóide aumenta.
 
-%\lstinputlisting[style=Matlab-editor, caption={Código em MATLAB que cria a função senoidal e gera a sequência de gráficos para diferentes frequências.}, basicstyle = \mlttfamily\scriptsize]{../Programas/ex1/c.m}
+\lstinputlisting[style=Matlab-editor, caption={Código em MATLAB que cria a função senoidal e gera a sequência de gráficos para diferentes frequências.}, basicstyle = \mlttfamily\scriptsize]{../Programas/ex1/c.m}
 
-%\begin{figure}[H]
-%	\centering
-%	\includegraphics[scale=0.7]{../Imagens/ex1/c.jpg} 
-%	\caption{Série de gráficos com variação na frequência.}
-%	\label{fig:1a}
-%\end{figure}
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.5]{../Imagens/ex1/c.jpg} 
+	\caption{Série de gráficos com variação na frequência.}
+	\label{fig:1c}
+\end{figure}
 
 \subsection{d)}
 
-A sequência de gráficos se encontra na figura. Fica claro que a frequência aparente da senóide diminui. Isto se deve ao fato de estarmos trabalhando com uma função $2\pi$-periódica, ou seja, devemos olhar para o resto da divisão da frequência pelo maior múltiplo de $2\pi$ ainda menor que a frequência.
+A sequência de gráficos se encontra na \textbf{figura 4}. Fica claro que a frequência aparente da senóide diminui. Isto se deve ao fato de estarmos trabalhando com uma função $2\pi$-periódica, ou seja, devemos olhar para o resto da divisão da frequência pelo maior múltiplo de $2\pi$ ainda menor que a frequência.
 
-%\lstinputlisting[style=Matlab-editor, caption={Código em MATLAB que cria a função senoidal e gera a sequência de gráficos para diferentes frequências.}, basicstyle = \mlttfamily\scriptsize]{../Programas/ex1/d.m}
+\lstinputlisting[style=Matlab-editor, caption={Código em MATLAB que cria a função senoidal e gera a sequência de gráficos para diferentes frequências.}, basicstyle = \mlttfamily\scriptsize]{../Programas/ex1/d.m}
 
-%\begin{figure}[H]
-%	\centering
-%	\includegraphics[scale=0.7]{../Imagens/ex1/d.jpg} 
-%	\caption{Série de gráficos com variação na frequência.}
-%	\label{fig:1a}
-%\end{figure}
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.5]{../Imagens/ex1/d.jpg} 
+	\caption{Série de gráficos com variação na frequência.}
+	\label{fig:1d}
+\end{figure}
 
 \subsection{e)}
 
-A sequência de gráficos se encontra na figura. Pelo que foi explicado no item anterior, a frequência aparente deve aumentar no intervalo proposto, exatamente o que fora observado. 
+A sequência de gráficos se encontra na \textbf{figura 5}. Pelo que foi explicado no item anterior, a frequência aparente deve aumentar no intervalo proposto, exatamente o que fora observado. 
 
-%\lstinputlisting[style=Matlab-editor, caption={Código em MATLAB que cria a função senoidal e gera a sequência de gráficos para diferentes frequências.}, basicstyle = \mlttfamily\scriptsize]{../Programas/ex1/e.m}
+\lstinputlisting[style=Matlab-editor, caption={Código em MATLAB que cria a função senoidal e gera a sequência de gráficos para diferentes frequências.}, basicstyle = \mlttfamily\scriptsize]{../Programas/ex1/e.m}
 
-%\begin{figure}[H]
-%	\centering
-%	\includegraphics[scale=0.7]{../Imagens/ex1/e.jpg} 
-%	\caption{Série de gráficos com variação na frequência.}
-%	\label{fig:1a}
-%\end{figure}
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.5]{../Imagens/ex1/e.jpg} 
+	\caption{Série de gráficos com variação na frequência.}
+	\label{fig:1e}
+\end{figure}
 
 
 \section{Aliasing de um Chirp}
@@ -106,7 +106,7 @@ Fazendo $f_s=8kHz$ e $\psi=0$:
 
 $$c[n] = cos(\frac{3}{320}\pi n^2 + \pi n)$$
 
-Perceba que a função é par. O sinal de amostragem foi gerado pelo \textbf{código} e seu gráfico está exposto na \textbf{figura}. 
+Perceba que a função é par. O sinal de amostragem foi gerado pelo código abaixo e seu gráfico está exposto na \textbf{figura 6}. 
 
 \lstinputlisting[style=Matlab-editor, caption={Código em MATLAB para gerar o sinal amostrado do item (b) do exercício 2, bem como seus gráficos 'plot' e 'stem'.}, basicstyle = \mlttfamily\scriptsize]{../Programas/ex2/b.m}
 
@@ -114,14 +114,14 @@ Perceba que a função é par. O sinal de amostragem foi gerado pelo \textbf{có
 	\centering
 	\includegraphics[scale=0.6]{../Imagens/ex2/b.jpg} 
 	\caption{Gráficos 'plot' e 'stem', respectivamente, de $c[n]$}
-	\label{fig:1a}
+	\label{fig:2b}
 \end{figure}
 
 \subsection{c)}
 
 $$f_i(t) = 0 \therefore \frac{\mu}{{f_s}^2}n + \frac{f_l}{f_s} = 0 \therefore n\approx -53$$.
 
-Isso é confirmado pelo gráfico, pois a função é par, isto é, $f(-n)=f(n)$, podemos olhar em $n=53$. No tempo, isso equivale a $t=\frac{n}{f_s}=6.67ms$. No \textbf{código}, plotamos $c[n]$ para $n$ de $0$ a $1000$, como mostra a \textbf{figura}. Vemos que as regições de baixa frequência estão regularmente espaçadas.
+Isso é confirmado pelo gráfico, pois a função é par, isto é, $f(-n)=f(n)$, podemos olhar em $n=53$. No tempo, isso equivale a $t=\frac{n}{f_s}=6.67ms$. No código abaixo, plotamos $c[n]$ para $n$ de $0$ a $1000$, como mostra a \textbf{figura 7}. Vemos que as regições de baixa frequência estão regularmente espaçadas.
 
 \lstinputlisting[style=Matlab-editor, caption={Código em MATLAB para gerar o sinal amostrado do item (b) do exercício 2, bem como seu gráfico 'plot' para n variando de 0 a 1000.}, basicstyle = \mlttfamily\scriptsize]{../Programas/ex2/c.m}
 
@@ -129,30 +129,30 @@ Isso é confirmado pelo gráfico, pois a função é par, isto é, $f(-n)=f(n)$,
 	\centering
 	\includegraphics[scale=0.6]{../Imagens/ex2/c.jpg} 
 	\caption{Gráfico 'plot' de $c[n]$ com $n$ de $0$ a $1000$}.
-	\label{fig:1a}
+	\label{fig:2c}
 \end{figure}
 
 \section{Escutando o Aliasing}
 
 \subsection{a)}
 
-O esboço dos 3 sinais em um subplot do MATLAB segue na figura.
+O esboço dos 3 sinais em um subplot do MATLAB segue na \textbf{figura 8}.
 
 Analisando os sons reproduzidos, é notável que quanto maior a frequência, mais agudo é seu som, além disso, o som parece ser o mesmo durante os 5 segundos.
 
-%\lstinputlisting[style=Matlab-editor, caption={Código em MATLAB que cria o sinal sinusoidal e gera a sequência de gráficos para diferentes frequências, além de reproduzir os sons de cada um dos sinais.}, basicstyle = \mlttfamily\scriptsize]{../Programas/ex3/a.m}
+\lstinputlisting[style=Matlab-editor, caption={Código em MATLAB que cria o sinal sinusoidal e gera a sequência de gráficos para diferentes frequências, além de reproduzir os sons de cada um dos sinais.}, basicstyle = \mlttfamily\scriptsize]{../Programas/ex3/a.m}
 
-%\begin{figure}[H]
-%	\centering
-%	\includegraphics[scale=0.7]{../Imagens/ex3/a.jpg} 
-%	\caption{Série de gráficos com variação na frequência.}
-%	\label{fig:1a}
-%\end{figure}
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.5]{../Imagens/ex3/a.jpg} 
+	\caption{Série de gráficos com variação na frequência.}
+	\label{fig:3a}
+\end{figure}
 
 
 \subsection{b)}
 
-O esboço dos 3 sinais em um subplot do MATLAB segue na figura.
+O esboço dos 3 sinais em um subplot do MATLAB segue na \textbf{figura 9}.
 
 Analisando os sons reproduzidos, temos:
 
@@ -162,14 +162,14 @@ Analisando os sons reproduzidos, temos:
 
 \textbf{3.4kHz:} A frequência começa diminuindo, o som pára momentaneamente e a frequência volta a aumentar.
 
-%\lstinputlisting[style=Matlab-editor, caption={Código em MATLAB que cria o sinal “chirp” e gera a sequência de gráficos para diferentes frequências, além de reproduzir os sons de cada um dos sinais.}, basicstyle = \mlttfamily\scriptsize]{../Programas/ex3/b.m}
+\lstinputlisting[style=Matlab-editor, caption={Código em MATLAB que cria o sinal “chirp” e gera a sequência de gráficos para diferentes frequências, além de reproduzir os sons de cada um dos sinais.}, basicstyle = \mlttfamily\scriptsize]{../Programas/ex3/b.m}
 
-%\begin{figure}[H]
-%	\centering
-%	\includegraphics[scale=0.7]{../Imagens/ex3/b.jpg} 
-%	\caption{Série de gráficos com variação na frequência.}
-%	\label{fig:1a}
-%\end{figure}
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.5]{../Imagens/ex3/b.jpg} 
+	\caption{Série de gráficos com variação na frequência.}
+	\label{fig:3b}
+\end{figure}
 
 \section{Montagem de uma Onda Sinoidal}
 
@@ -212,9 +212,42 @@ Portanto, a informação não é suficiente para determinar $x(t)$.
 
 \subsection{a)}
 
+A função ‘grid minor’ foi utilizada para dispor a grade fina, que tem espaçamento automático de 0.05 e o gráfico segue na \textbf{figura 10}.
+
+\lstinputlisting[style=Matlab-editor, caption={Código em MATLAB que cria o sinal e gera seu gráfico.}, basicstyle = \mlttfamily\scriptsize]{../Programas/ex5/a.m}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.5]{../Imagens/ex5/a.jpg} 
+	\caption{Gráfico do sinal solicitado.}
+	\label{fig:5a}
+\end{figure}
+
 \subsection{b)}
 
+O resultado deve ser o mesmo da interpolação linear considerando $x(-1) = t(3) = 0$, uma vez que essa situação coincide com a operação feita considerando o pulso como não-nulo apenas nos pontos $t(0)$, $t(1)$ e $t(2)$.
+
+\lstinputlisting[style=Matlab-editor, caption={Código em MATLAB que cria o sinal, o impulso, realiza a convolução entre eles e gera o gráfico da figura 11.}, basicstyle = \mlttfamily\scriptsize]{../Programas/ex5/b.m}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.5]{../Imagens/ex5/b.jpg} 
+	\caption{Série de gráficos com variação na frequência.}
+	\label{fig:5b}
+\end{figure}
+
 \subsection{c)}
+
+Essa curva não é realista em um sentido prático, uma vez que se a estendermos para valores além do intervalo, ela diverge, e produz resultados distantes da realidade, além de apresentar uma única concavidade.
+
+\lstinputlisting[style=Matlab-editor, caption={Código em MATLAB que cria o sinal, realiza sua interpolação quadrática e gera o gráfico da figura 12}, basicstyle = \mlttfamily\scriptsize]{../Programas/ex5/c.m}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.5]{../Imagens/ex5/c.jpg} 
+	\caption{Série de gráficos com variação na frequência.}
+	\label{fig:5c}
+\end{figure}
 
 \section{Filtragem Passa-Baixo Ideal}
 
@@ -228,7 +261,7 @@ $$x_r(t) = \sum_{i=1}^{length(n)}x[i]\frac{sin(\pi (t - n[i]T_s)/T_s)}{\pi (t - 
 
 \subsection{b)}
 
-Usamos a função criada para interpolar uma amostra de um único ponto $x(0)=1$, como descrito no \textbf{codigo} e exposto na \textbf{figura}.
+Usamos a função criada para interpolar uma amostra de um único ponto $x(0)=1$, como descrito no \textbf{codigo} e exposto na \textbf{figura 13}.
 
 \lstinputlisting[style=Matlab-editor, caption={Código em MATLAB interpolar a amostra de um único ponto x(0)=1, bem como plotar seu gráfico.}, basicstyle = \mlttfamily\scriptsize]{../Programas/ex6/b.m}
 
@@ -236,12 +269,12 @@ Usamos a função criada para interpolar uma amostra de um único ponto $x(0)=1$
 	\centering
 	\includegraphics[scale=0.6]{../Imagens/ex6/b.jpg} 
 	\caption{Gráfico da interpolação senoidal da amostra de um único ponto $x(0)=1$}.
-	\label{fig:1a}
+	\label{fig:6b}
 \end{figure}
 
 \subsection{c)}
 
-Dessa vez usamos a função criada para interpolar uma amostra de três pontos $x(0)=2$, $x(1)=1$ e $x(2)=-1$ como descrito no \textbf{codigo} e exposto na \textbf{figura}.
+Dessa vez usamos a função criada para interpolar uma amostra de três pontos $x(0)=2$, $x(1)=1$ e $x(2)=-1$ como descrito no \textbf{codigo} e exposto na \textbf{figura 14}.
 
 \lstinputlisting[style=Matlab-editor, caption={Código em MATLAB interpolar a amostra de três pontos $x(0)=2$, $x(1)=1$ e $x(2)=-1$, bem como plotar seu gráfico.}, basicstyle = \mlttfamily\scriptsize]{../Programas/ex6/c.m}
 
@@ -249,7 +282,7 @@ Dessa vez usamos a função criada para interpolar uma amostra de três pontos $
 	\centering
 	\includegraphics[scale=0.6]{../Imagens/ex6/c.jpg} 
 	\caption{Gráfico da interpolação senoidal da amostra de três pontos $x(0)=2$, $x(1)=1$ e $x(2)=-1$}.
-	\label{fig:1a}
+	\label{fig:6c}
 \end{figure}
 
 Perceba que o gráfico da \textbf{figura} é um ajuste do gráfico da \textbf{figura}, de modo que este passe pelos pontos amostrados.
